--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -538,5 +538,41 @@
     "chibox_statuses_description": "特権を管理し、毎日限定ボーナスを獲得しよう",
     "win_bonus_game": "ボーナスゲーム勝利で付与",
     "cases_not_found": "ケースが見つかりません"
+  },
+  "modal": {
+    "confirm": "確認",
+    "cancel": "キャンセル",
+    "close": "閉じる",
+    "save": "保存",
+    "delete": "削除",
+    "loading": "読み込み中...",
+    "error": "エラー",
+    "success": "成功",
+    "warning": "警告",
+    "info": "情報"
+  },
+  "registration_success_modal": {
+    "title": "登録完了！",
+    "welcome": "ChiBoxへようこそ！",
+    "account_created": "アカウントが正常に作成されました",
+    "getting_started": "次のステップ：",
+    "step_1": "初回無料ケースを開封",
+    "step_2": "インベントリのアイテムを探索",
+    "step_3": "ボーナス用ステータス取得を検討",
+    "step_4": "ゲームやコンペに参加",
+    "start_playing": "プレイ開始",
+    "bonus_received": "スタートボーナスを獲得しました！"
+  },
+  "live_drops": {
+    "title": "🔥 最新ドロップ",
+    "player_won": "{{player}}が獲得",
+    "just_now": "たった今",
+    "minutes_ago": "{{minutes}}分前",
+    "hour_ago": "1時間前",
+    "hours_ago": "{{hours}}時間前",
+    "no_drops": "まだドロップなし",
+    "loading_drops": "ドロップ読み込み中...",
+    "online": "オンライン",
+    "offline": "切断中"
   }
 }
