--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -538,5 +538,41 @@
     "chibox_statuses_description": "특권을 관리하고 매일 독점 보너스를 받으세요",
     "win_bonus_game": "보너스 게임 승리로 수여됨",
     "cases_not_found": "상자를 찾을 수 없습니다"
+  },
+  "modal": {
+    "confirm": "확인",
+    "cancel": "취소",
+    "close": "닫기",
+    "save": "저장",
+    "delete": "삭제",
+    "loading": "로딩중...",
+    "error": "오류",
+    "success": "성공",
+    "warning": "경고",
+    "info": "정보"
+  },
+  "registration_success_modal": {
+    "title": "등록 완료!",
+    "welcome": "ChiBox에 오신 것을 환영합니다!",
+    "account_created": "계정이 성공적으로 생성되었습니다",
+    "getting_started": "다음 단계:",
+    "step_1": "첫 번째 무료 상자 열기",
+    "step_2": "인벤토리의 아이템 탐색",
+    "step_3": "보너스용 상태 구매 고려",
+    "step_4": "게임과 경쟁에 참여",
+    "start_playing": "게임 시작",
+    "bonus_received": "시작 보너스를 받았습니다!"
+  },
+  "live_drops": {
+    "title": "🔥 최근 드롭",
+    "player_won": "{{player}}이(가) 획득",
+    "just_now": "방금 전",
+    "minutes_ago": "{{minutes}}분 전",
+    "hour_ago": "1시간 전",
+    "hours_ago": "{{hours}}시간 전",
+    "no_drops": "아직 드롭 없음",
+    "loading_drops": "드롭 로딩중...",
+    "online": "온라인",
+    "offline": "연결 끊김"
   }
 }
