--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -1,4 +1,12 @@
 {
+  "case_names": {
+    "Бонусный кейс": "보너스 상자",
+    "Ежедневный кейс - Статус": "일일 상자 - 상태",
+    "Бесплатный кейс": "무료 상자",
+    "Статус кейс": "상태 상자",
+    "Премиум кейс": "프리미엄 상자",
+    "Ежедневный кейс": "일일 상자"
+  },
   "common": {
     "loading": "로딩 중...",
     "error": "오류",
@@ -16,7 +24,11 @@
     "daily": "매일",
     "online": "온라인: {{count}}",
     "balance": "잔액",
-    "bonus_keyword": "보너스"
+    "bonus_keyword": "보너스",
+    "cases_available": "상자 이용 가능",
+    "hours_short": "시",
+    "minutes_short": "분",
+    "seconds_short": "초"
   },
   "header": {
     "home": "홈",
