--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -17,7 +17,19 @@
     "online": "Онлайн: {{count}}",
     "balance": "Баланс",
     "currency_suffix": " КР",
-    "bonus_keyword": "бонус"
+    "bonus_keyword": "бонус",
+    "cases_available": "Кейсы доступны",
+    "hours_short": "ч",
+    "minutes_short": "м",
+    "seconds_short": "с"
+  },
+  "case_names": {
+    "Бонусный кейс": "Бонусный кейс",
+    "Ежедневный кейс - Статус": "Ежедневный кейс - Статус",
+    "Бесплатный кейс": "Бесплатный кейс",
+    "Статус кейс": "Статус кейс",
+    "Премиум кейс": "Премиум кейс",
+    "Ежедневный кейс": "Ежедневный кейс"
   },
   "header": {
     "home": "Главная",
