--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -1,4 +1,12 @@
 {
+  "case_names": {
+    "Бонусный кейс": "奖励箱子",
+    "Ежедневный кейс - Статус": "每日箱子 - 状态",
+    "Бесплатный кейс": "免费箱子",
+    "Статус кейс": "状态箱子",
+    "Премиум кейс": "高级箱子",
+    "Ежедневный кейс": "每日箱子"
+  },
   "common": {
     "loading": "加载中...",
     "error": "错误",
@@ -15,7 +23,11 @@
     "play": "开始游戏",
     "daily": "每日",
     "online": "在线：{{count}}",
-    "balance": "余额"
+    "balance": "余额",
+    "cases_available": "箱子可用",
+    "hours_short": "时",
+    "minutes_short": "分",
+    "seconds_short": "秒"
   },
   "header": {
     "home": "首页",
