--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -1,4 +1,12 @@
 {
+  "case_names": {
+    "Бонусный кейс": "ボーナスケース",
+    "Ежедневный кейс - Статус": "デイリーケース - ステータス",
+    "Бесплатный кейс": "無料ケース",
+    "Статус кейс": "ステータスケース",
+    "Премиум кейс": "プレミアムケース",
+    "Ежедневный кейс": "デイリーケース"
+  },
   "common": {
     "loading": "読み込み中...",
     "error": "エラー",
@@ -16,7 +24,11 @@
     "daily": "毎日",
     "online": "オンライン: {{count}}",
     "balance": "残高",
-    "bonus_keyword": "ボーナス"
+    "bonus_keyword": "ボーナス",
+    "cases_available": "ケース利用可能",
+    "hours_short": "時",
+    "minutes_short": "分",
+    "seconds_short": "秒"
   },
   "header": {
     "home": "ホーム",
