--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -1,10 +1,14 @@
 {
   "case_names": {
-    "Бонусный кейс": "ボーナスケース",
+    "Ежедневный кейс - Бесплатный": "デイリーケース - 無料",
     "Ежедневный кейс - Статус": "デイリーケース - ステータス",
+    "Ежедневный кейс - Статус+": "デイリーケース - ステータス+",
+    "Ежедневный кейс - Статус++": "デイリーケース - ステータス++",
+    "Бонусный кейс": "ボーナスケース",
+    "Стандартный кейс": "スタンダードケース",
+    "Премиум кейс": "プレミアムケース",
     "Бесплатный кейс": "無料ケース",
     "Статус кейс": "ステータスケース",
-    "Премиум кейс": "プレミアムケース",
     "Ежедневный кейс": "デイリーケース"
   },
   "common": {
