--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -24,11 +24,15 @@
     "seconds_short": "с"
   },
   "case_names": {
-    "Бонусный кейс": "Бонусный кейс",
+    "Ежедневный кейс - Бесплатный": "Ежедневный кейс - Бесплатный",
     "Ежедневный кейс - Статус": "Ежедневный кейс - Статус",
+    "Ежедневный кейс - Статус+": "Ежедневный кейс - Статус+",
+    "Ежедневный кейс - Статус++": "Ежедневный кейс - Статус++",
+    "Бонусный кейс": "Бонусный кейс",
+    "Стандартный кейс": "Стандартный кейс",
+    "Премиум кейс": "Премиум кейс",
     "Бесплатный кейс": "Бесплатный кейс",
     "Статус кейс": "Статус кейс",
-    "Премиум кейс": "Премиум кейс",
     "Ежедневный кейс": "Ежедневный кейс"
   },
   "header": {
