--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -1,10 +1,14 @@
 {
   "case_names": {
-    "Бонусный кейс": "奖励箱子",
+    "Ежедневный кейс - Бесплатный": "每日箱子 - 免费",
     "Ежедневный кейс - Статус": "每日箱子 - 状态",
+    "Ежедневный кейс - Статус+": "每日箱子 - 状态+",
+    "Ежедневный кейс - Статус++": "每日箱子 - 状态++",
+    "Бонусный кейс": "奖励箱子",
+    "Стандартный кейс": "标准箱子",
+    "Премиум кейс": "高级箱子",
     "Бесплатный кейс": "免费箱子",
     "Статус кейс": "状态箱子",
-    "Премиум кейс": "高级箱子",
     "Ежедневный кейс": "每日箱子"
   },
   "common": {
