--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -1,10 +1,14 @@
 {
   "case_names": {
-    "Бонусный кейс": "보너스 상자",
+    "Ежедневный кейс - Бесплатный": "일일 상자 - 무료",
     "Ежедневный кейс - Статус": "일일 상자 - 상태",
+    "Ежедневный кейс - Статус+": "일일 상자 - 상태+",
+    "Ежедневный кейс - Статус++": "일일 상자 - 상태++",
+    "Бонусный кейс": "보너스 상자",
+    "Стандартный кейс": "표준 상자",
+    "Премиум кейс": "프리미엄 상자",
     "Бесплатный кейс": "무료 상자",
     "Статус кейс": "상태 상자",
-    "Премиум кейс": "프리미엄 상자",
     "Ежедневный кейс": "일일 상자"
   },
   "common": {
