--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -598,5 +598,49 @@
     "loading_drops": "ドロップ読み込み中...",
     "online": "オンライン",
     "offline": "切断中"
+  },
+  "roulette": {
+    "wheel_of_fortune": "🎰 運命の輪",
+    "spin_and_win": "ルーレットを回してサブスクリプション日数を獲得！",
+    "games_per_day": "1日30回 • 48分ごとにリチャージ",
+    "next_game_in": "次のゲームまで:",
+    "spin_wheel": "ルーレットを回す",
+    "spinning": "回転中...",
+    "prizes": "賞品:",
+    "subscription_1_day": "1日サブスクリプション",
+    "subscription_2_days": "2日サブスクリプション",
+    "empty": "空",
+    "error_occurred": "エラーが発生しました",
+    "something_went_wrong": "何かがうまくいきませんでした",
+    "roulette_error": "ルーレットゲームエラー:",
+    "lose_messages": [
+      "今回はダメでした",
+      "とても残念",
+      "またチャンスがあります",
+      "ああ ;(",
+      "惜しかった！",
+      "落胆しないで",
+      "明日また試して",
+      "運が逃げた",
+      "次回はもっと運がある",
+      "今日はダメ",
+      "幸運は眠っている",
+      "次回かも？",
+      "忍耐と努力",
+      "大したことない",
+      "頑張って！"
+    ],
+    "win_messages": [
+      "みんな喜んでいます",
+      "おめでとうございます！",
+      "信じられない！",
+      "よくやった！",
+      "素晴らしい！",
+      "素晴らしい仕事！",
+      "運があなたの味方です！",
+      "見事！",
+      "本当にすごい！",
+      "あなたはラッキーです！"
+    ]
   }
 }
