--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -598,5 +598,49 @@
     "loading_drops": "드롭 로딩중...",
     "online": "온라인",
     "offline": "연결 끊김"
+  },
+  "roulette": {
+    "wheel_of_fortune": "🎰 행운의 바퀴",
+    "spin_and_win": "바퀴를 돌려서 구독 일수를 획득하세요!",
+    "games_per_day": "하루 30게임 • 48분마다 재충전",
+    "next_game_in": "다음 게임까지:",
+    "spin_wheel": "바퀴 돌리기",
+    "spinning": "돌리는 중...",
+    "prizes": "상품:",
+    "subscription_1_day": "1일 구독",
+    "subscription_2_days": "2일 구독",
+    "empty": "비어있음",
+    "error_occurred": "오류가 발생했습니다",
+    "something_went_wrong": "문제가 발생했습니다",
+    "roulette_error": "룰렛 게임 오류:",
+    "lose_messages": [
+      "이번엔 아니에요",
+      "정말 유감이에요",
+      "또 기회가 있을 거예요",
+      "아 ;(",
+      "거의 성공했어요!",
+      "실망하지 마세요",
+      "내일 다시 시도해보세요",
+      "운이 등을 돌렸네요",
+      "다음번엔 더 운이 좋을 거예요",
+      "오늘은 아니에요",
+      "행운이 잠들어 있어요",
+      "다음번에 될까요?",
+      "인내와 노력",
+      "나쁜 건 아니에요",
+      "계속 힘내세요!"
+    ],
+    "win_messages": [
+      "우리 모두 이것을 기뻐해요",
+      "축하합니다!",
+      "믿을 수 없어요!",
+      "잘했어요!",
+      "환상적이에요!",
+      "훌륭한 일이에요!",
+      "운이 당신 편이에요!",
+      "멋져요!",
+      "정말 대단해요!",
+      "당신은 행운아예요!"
+    ]
   }
 }
