--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -590,5 +590,49 @@
     "loading_drops": "加载掉落中...",
     "online": "在线",
     "offline": "已断开"
+  },
+  "roulette": {
+    "wheel_of_fortune": "🎰 幸运轮盘",
+    "spin_and_win": "转动轮盘赢取订阅天数！",
+    "games_per_day": "每天30次游戏 • 每48分钟充能",
+    "next_game_in": "下次游戏时间:",
+    "spin_wheel": "转动轮盘",
+    "spinning": "转动中...",
+    "prizes": "奖品:",
+    "subscription_1_day": "1天订阅",
+    "subscription_2_days": "2天订阅",
+    "empty": "空",
+    "error_occurred": "发生错误",
+    "something_went_wrong": "出了些问题",
+    "roulette_error": "轮盘游戏错误:",
+    "lose_messages": [
+      "这次不行",
+      "很遗憾",
+      "您还有更多机会",
+      "唉 ;(",
+      "差一点就成功了！",
+      "别沮丧",
+      "明天再试试",
+      "运气背离了",
+      "下次会更幸运",
+      "今天不行",
+      "幸运女神在睡觉",
+      "也许下次？",
+      "耐心和努力",
+      "没什么大不了的",
+      "坚持住！"
+    ],
+    "win_messages": [
+      "我们都为此高兴",
+      "恭喜！",
+      "不可思议！",
+      "做得好！",
+      "太棒了！",
+      "出色的工作！",
+      "幸运在您这边！",
+      "太棒了！",
+      "简直太好了！",
+      "您真幸运！"
+    ]
   }
 }
